fix omninox logo

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 
       <div class="row company-row">
         <div class="col-xs-12 col-lg-4">
-          <a href="http://omninox.org"><img class="logo" src="/assets/omninox.svg"></img></a>
+          <a href="http://omninox.org"><img class="logo" src="/assets/omninox.png"></img></a>
         </div>
         <div class="col-xs-12 col-lg-8">
           <h2> Omninox </h2>
