--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,34 @@
           <a href="http://roomsync.com"><img class="logo" src="/assets/roomsync.png"></img></a>
         </div>
         <div class="col-xs-12 col-lg-8">
+          <h2> Agora </h2>
+          <p class="details"> Centralized communication for student organizations. </p>
+
+          <ul class="icons list-unstyled">
+            <li>
+              <a href="https://www.agoraorg.com"><i class="fa fa-globe"></i></a>
+            </li>
+            <li>
+              <a href="https://angel.co/agoraorganizations"><i class="fa fa-angellist"></i></a>
+            </li>
+            <!--<li>
+              <a href="http://twitter.com/roomsync"><i class="fa fa-twitter"></i></a>
+            </li>-->
+            <!--<li>
+              <a href="https://www.crunchbase.com/organization/roomsync#/entity"><span class="label label-default">CB</span></a>
+            </li>-->
+            <li>
+              <a href="http://www.facebook.com/agoraorganizations"><i class="fa fa-facebook"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row company-row">
+        <div class="col-xs-12 col-lg-4">
+          <a href="http://roomsync.com"><img class="logo" src="/assets/roomsync.png"></img></a>
+        </div>
+        <div class="col-xs-12 col-lg-8">
           <h2> RoomSync </h2>
           <p class="details"> Empowering roommate choice. </p>
 
