--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 
       <div class="row company-row">
         <div class="col-xs-12 col-lg-4">
-          <a href="http://roomsync.com"><img class="logo" src="/assets/roomsync.png"></img></a>
+          <a href="https://agoraorg.com"><img class="logo" src="/assets/agora.png"></img></a>
         </div>
         <div class="col-xs-12 col-lg-8">
           <h2> Agora </h2>
